objects/Root_Case__c.object
<CustomObject>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Request Received</fullName>
                    <default>true</default>
                    <label>Initial Request Received</label>
                </value>
                <value>
                    <fullName>Information Verification In Process</fullName>
                </value>
                <value>
                    <fullName>In Detailed CP/CPS Review</fullName>
                </value>
                <value>
                    <fullName>In Public Discussion</fullName>
                </value>
                <value>
                    <fullName>Discussion on Hold</fullName>
                </value>
                <value>
                    <fullName>CA Action Items from Discussion</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion</fullName>
                </value>
                <value>
                    <fullName>Approved, Pending Inclusion and EV</fullName>
                </value>
                <value>
                    <fullName>Included, Pending EV</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Request Withdrawn by CA</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed - CA Unresponsive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revocation_Tested__c</fullName>
        <defaultValue>&quot;NEED: Test with http://certificate.revocationcheck.com/ make sure there aren&apos;t any errors.&quot;</defaultValue>
        <inlineHelpText>Browse to http://certificate.revocationcheck.com/ and enter the Test Website URL. Make sure there are no errors listed in the output.</inlineHelpText>
        <label>Revocation Tested</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Explain the unique function of this root, especially if requesting inclusion of multiple roots.&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>If requesting inclusion of multiple roots, explain unique function of this root.</inlineHelpText>
        <label>Role</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit record ID for Root Case</inlineHelpText>
        <label>Root Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Download_URL__c</fullName>
        <defaultValue>&quot;NEED: A public URL through which the CA certificate can be directly downloaded.&quot;</defaultValue>
        <label>Root Certificate Download URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name_Existing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Previously called Included Certificate Name</description>
        <inlineHelpText>The Root Certificate that this Root Case applies to.</inlineHelpText>
        <label>Certificate Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Root</value>
            </filterItems>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.CA_Owner_Name_Existing__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Root Cases (Included Certificate)</relationshipLabel>
        <relationshipName>Root_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Certificate_Name__c</fullName>
        <label>Root Certificate Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Root_Stores_Applying_To__c</fullName>
        <label>Root Stores Applying To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Mozilla</fullName>
                    <default>true</default>
                    <label>Mozilla</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SHA_1_Fingerprint__c</fullName>
        <label>SHA-1 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_1__c</fullName>
        <formula>IF (SHA_1_Fingerprint__c &lt;&gt; null, LEFT(SHA_1_Fingerprint__c, 11) + &quot;...&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHA_256_Fingerprint__c</fullName>
        <label>SHA-256 Fingerprint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SHA_256__c</fullName>
        <formula>IF (SHA_256_Fingerprint__c &lt;&gt; null, LEFT(SHA_256_Fingerprint__c, 11) + &quot;...&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHA-256</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPKI_SHA256__c</fullName>
        <inlineHelpText>Identifies similar logical certificates in different CA Hierarchies. SHA256(der(spki))</inlineHelpText>
        <label>SPKI SHA256</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSL_Validation_Type__c</fullName>
        <label>SSL Validation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DV</fullName>
                </value>
                <value>
                    <fullName>OV</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signature_Hash_Algorithm__c</fullName>
        <label>Signature Hash Algorithm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ecdsaWithSHA256</fullName>
                </value>
                <value>
                    <fullName>ecdsaWithSHA384</fullName>
                </value>
                <value>
                    <fullName>ecdsaWithSHA512</fullName>
                </value>
                <value>
                    <fullName>MD2WithRSA</fullName>
                </value>
                <value>
                    <fullName>MD5WithRSA</fullName>
                </value>
                <value>
                    <fullName>SHA1WithRSA</fullName>
                </value>
                <value>
                    <fullName>SHA256WithRSA</fullName>
                </value>
                <value>
                    <fullName>SHA384WithRSA</fullName>
                </value>
                <value>
                    <fullName>SHA512WithRSA</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
                <value>
                    <fullName>md2WithRSAEncryption</fullName>
                    <isActive>false</isActive>
                    <label>md2WithRSAEncryption</label>
                </value>
                <value>
                    <fullName>md5WithRSAEncryption</fullName>
                    <isActive>false</isActive>
                    <label>md5WithRSAEncryption</label>
                </value>
                <value>
                    <fullName>sha1WithRSAEncryption</fullName>
                    <isActive>false</isActive>
                    <label>sha1WithRSAEncryption</label>
                </value>
                <value>
                    <fullName>sha256WithRSAEncryption</fullName>
                    <isActive>false</isActive>
                    <label>sha256WithRSAEncryption</label>
                </value>
                <value>
                    <fullName>sha384WithRSAEncryption</fullName>
                    <isActive>false</isActive>
                    <label>sha384WithRSAEncryption</label>
                </value>
                <value>
                    <fullName>sha512WithRSAEncryption</fullName>
                    <isActive>false</isActive>
                    <label>sha512WithRSAEncryption</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Audit_Date_Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by trigger</description>
        <label>Standard Audit Date Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Summary__c</fullName>
        <formula>&quot;Mozilla = &quot; + Text(Request_Status__c) + &quot;; Microsoft = &quot; + Text(Microsoft_Request_Status__c) + &quot;;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_SPKI_SHA256__c</fullName>
        <inlineHelpText>Identifies same logical certificates in different CA Hierarchies. SHA256(der(subject)+der(spki))</inlineHelpText>
        <label>Subject + SPKI SHA256</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Technically_Constrained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technically Constrained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Description__c</fullName>
        <defaultValue>&quot;Information about the tests that are run on the three test websites is here: https://github.com/mozilla/CCADB-Tools/blob/master/capi/README.md&quot;</defaultValue>
        <label>Test Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Notes__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Audit Update Request&quot;, 
&quot;NEED: If any of the Test Website statuses say &apos;FAIL&apos;, then see the test details in the &apos;Test Websites Validation Result&apos;’ section at the bottom of this page. Resolve the errors and re-run website validation by clicking on the &apos;Test Websites Validation&apos; button at the top of this page. Or explain the errors here&quot;,
&quot;NEED:&quot; &amp; BR() &amp;
&quot;- If requesting Websites trust bit provide 3 URLs to 3 test websites (valid, expired, revoked) whose TLS/SSL cert chains up to this root.&quot; &amp; BR() &amp;
&quot;- If only requesting the Email trust bit, then attach an example S/MIME cert to the bug.&quot;
)</defaultValue>
        <label>Test Notes</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Results_Verified__c</fullName>
        <label>Test Results Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Website_Expired_Results__c</fullName>
        <label>Test Website Expired - Results</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Website_Expired_Status__c</fullName>
        <inlineHelpText>Details are in the Test Websites Validation Results section at the bottom of this page</inlineHelpText>
        <label>Test Website Expired - Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Website_Expired__c</fullName>
        <inlineHelpText>REQUIRED by BRs: URL to website with an expired TLS/SSL cert that chains up to the Root Certificate</inlineHelpText>
        <label>Test Website - Expired</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Website_Lint_Test__c</fullName>
        <defaultValue>IF ($RecordType.Name = &quot;CA Root Inclusion Request&quot;, 
&quot;NEED: Provide evidence that you have tested and verified that no certificates issued in this CA hierarchy violate the X.509 rules.&quot; &amp; BR() &amp; 
&quot;X.509 Lint Test: https://github.com/kroeckx/x509lint&quot;, 
&quot;&quot;)</defaultValue>
        <inlineHelpText>Browse to https://cert-checker.allizom.org/ and enter the test website and click on the &apos;Browse&apos; button to provide the PEM file for the root certificate. Then click on &apos;run certlint&apos;. All errors must be resolved/fixed.</inlineHelpText>
        <label>Test Website Lint Test</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Website_Revoked_Results__c</fullName>
        <label>Test Website Revoked - Results</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Website_Revoked_Status__c</fullName>
        <inlineHelpText>Details are in the Test Websites Validation Results section at the bottom of this page</inlineHelpText>
        <label>Test Website Revoked - Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Website_Revoked__c</fullName>
        <inlineHelpText>REQUIRED by BRs: URL to website with a revoked TLS/SSL cert that chains up to the Root Certificate</inlineHelpText>
        <label>Test Website - Revoked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Website_Valid_Results__c</fullName>
        <label>Test Website Valid - Results</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Website_Valid_Status__c</fullName>
        <inlineHelpText>Details are in the Test Websites Validation Results section at the bottom of this page</inlineHelpText>
        <label>Test Website Valid - Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Website_Valid__c</fullName>
        <inlineHelpText>REQUIRED by BRs: URL to website with a valid TLS/SSL cert that chains up to the Root Certificate</inlineHelpText>
        <label>Test Website - Valid</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Website_Verified__c</fullName>
        <label>Test Websites Verified?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Data Verified</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trust_Bits__c</fullName>
        <inlineHelpText>Select the trust bits you are requesting to be enabled for this root.</inlineHelpText>
        <label>Mozilla Trust Bits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Trust Bits Turned Off</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Websites</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_From_YYYY_MMM_DD__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY MMM DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999 Jul 09&quot;</description>
        <formula>IF ( NOT ISBLANK(Valid_From__c),

TEXT(YEAR(Valid_From__c)) &amp; &quot; &quot; &amp;

CASE(MONTH(Valid_From__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
NULL) &amp; &quot; &quot; &amp;

IF (LEN(TEXT(DAY(Valid_From__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Valid_From__c)),TEXT(DAY(Valid_From__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From [GMT]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To_YYYY_MMM_DD__c</fullName>
        <description>This formula field converts regular date field to display date in YYYY MMM DD format. Eg: &quot;7/9/1999&quot; shows as &quot;1999 Jul 09&quot;</description>
        <formula>IF ( NOT ISBLANK(Valid_To__c),

TEXT(YEAR(Valid_To__c)) &amp; &quot; &quot; &amp;

CASE(MONTH(Valid_To__c),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;,
4, &quot;Apr&quot;,
5, &quot;May&quot;,
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
NULL) &amp; &quot; &quot; &amp;

IF (LEN(TEXT(DAY(Valid_To__c))) = 1,&quot;0&quot; &amp; TEXT(DAY(Valid_To__c)),TEXT(DAY(Valid_To__c))),

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid To [GMT]</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X_509_Certificate_PEM__c</fullName>
        <label>X.509 Certificate (PEM)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Root Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCAAuditUpdateRootCases</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Root_Case__c.CA_Audit_Update_Request</value>
        </filters>
        <label>All CA Audit Root Cases</label>
    </listViews>
    <listViews>
        <fullName>AllCARootInclusionRootCases</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Root_Case__c.CA_Root_Inclusion_Request</value>
        </filters>
        <label>All CA Root Inclusion Root Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCAAuditUpdateRootCases</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Root_Case__c.CA_Audit_Update_Request</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold,Complete,Closed - CA Unresponsive</value>
        </filters>
        <label>All Open CA Audit Root Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCARootInclusionRootCases</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Root_Case__c.CA_Root_Inclusion_Request</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold,Complete,Closed - CA Unresponsive</value>
        </filters>
        <label>All Open CA Root Inclusion Root Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenRootCases</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold,Complete,Closed - CA Unresponsive</value>
        </filters>
        <label>All Open Root Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenRootCases</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>On Hold,Complete,Closed - CA Unresponsive</value>
        </filters>
        <label>My Open Root Cases</label>
    </listViews>
    <listViews>
        <fullName>MyRootCases</fullName>
        <columns>NAME</columns>
        <columns>Case_No__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Request_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Root_Certificate_Name__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Root Cases</label>
    </listViews>
    <nameField>
        <displayFormat>R{00000000}</displayFormat>
        <label>Root Case No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Root Cases</pluralLabel>
    <recordTypes>
        <fullName>CA_Audit_Update_Request</fullName>
        <active>true</active>
        <description>Submission of the CA audit update request</description>
        <label>CA Audit Update Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_Owner_Root_Inclusion_Request</fullName>
        <active>true</active>
        <label>CA Owner/Root Inclusion Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_Root_Inclusion_Request</fullName>
        <active>true</active>
        <description>Creation of the CA Root inclusion request</description>
        <label>CA Root Inclusion Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckApplyAuditInfoAppliedToRootCerts</fullName>
        <active>true</active>
        <description>Atleast one checkbox must be checked before saving the record - only check for Audit Cases</description>
        <errorConditionFormula>AND ((RecordType.Name = &quot;CA Audit Update Request&quot;), Apply_Standard_Audit__c = False, Apply_Code_Signing_Audit__c = False, Apply_BR_Audit__c = False, Apply_EV_Audit__c = False, Apply_EV_Code_Signing_Audit__c = False)</errorConditionFormula>
        <errorMessage>INDICATE WHICH AUDITS APPLY TO THIS CERTIFICATE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckJustificationForClientAuth</fullName>
        <active>true</active>
        <description>If EKU field is checked then user must provide justification text</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;CA Root Inclusion Request&quot;, EKU_Client_Authentication__c = True, ISBLANK(Justification_Client_Authentication__c))</errorConditionFormula>
        <errorDisplayField>Justification_Client_Authentication__c</errorDisplayField>
        <errorMessage>Please provide justification for Client Authentication</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckJustificationForDocumentSigning</fullName>
        <active>true</active>
        <description>If EKU field is checked then user must provide justification text</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;CA Root Inclusion Request&quot;, EKU_Document_Signing__c = True, ISBLANK(Justification_Document_Signing__c))</errorConditionFormula>
        <errorDisplayField>Justification_Document_Signing__c</errorDisplayField>
        <errorMessage>Please provide justification for Document Signing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckJustificationForOCSPSigning</fullName>
        <active>true</active>
        <description>If EKU field is checked then user must provide justification text</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;CA Root Inclusion Request&quot;, EKU_OCSP_Signing__c = True, ISBLANK(Justification_OCSP_Signing__c))</errorConditionFormula>
        <errorDisplayField>Justification_OCSP_Signing__c</errorDisplayField>
        <errorMessage>Please provide justification for OCSP Signing</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckJustificationForOther</fullName>
        <active>true</active>
        <description>If EKU field is checked then user must provide justification text</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;CA Root Inclusion Request&quot;, EKU_Other__c = True, ISBLANK(Justification_Other__c))</errorConditionFormula>
        <errorDisplayField>Justification_Other__c</errorDisplayField>
        <errorMessage>Please provide justification for Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckJustificationForSecuredEmail</fullName>
        <active>true</active>
        <description>If EKU field is checked then user must provide justification text</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;CA Root Inclusion Request&quot;, EKU_Secured_Email__c = True, ISBLANK(Justification_Secured_Email__c))</errorConditionFormula>
        <errorDisplayField>Justification_Secured_Email__c</errorDisplayField>
        <errorMessage>Please provide justification for Secured Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckJustificationForServerAuth</fullName>
        <active>true</active>
        <description>If EKU field is checked then user must provide justification text</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;CA Root Inclusion Request&quot;, EKU_Server_Authentication__c = True, ISBLANK(Justification_Server_Authentication__c))</errorConditionFormula>
        <errorDisplayField>Justification_Server_Authentication__c</errorDisplayField>
        <errorMessage>Please provide justification for Server Authentication</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckJustificationForTimeStamping</fullName>
        <active>true</active>
        <description>If EKU field is checked then user must provide justification text</description>
        <errorConditionFormula>AND (RecordType.Name = &quot;CA Root Inclusion Request&quot;, EKU_Time_Stamping__c = True, ISBLANK(Justification_Time_Stamping__c))</errorConditionFormula>
        <errorDisplayField>Justification_Time_Stamping__c</errorDisplayField>
        <errorMessage>Please provide justification for Time Stamping</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Test_Website_Expired_URL</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR(LEN (Test_Website_Expired__c) = 0, 
REGEX(Test_Website_Expired__c, &quot;^[hH][tT][tT][pP][sS][0-9A-Za-z+&amp;@#/%?=~\\-_|!:,.;\\[\\]()]*$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Test_Website_Expired__c</errorDisplayField>
        <errorMessage>Please provide valid test website link, URL must begin with &apos;https&apos; and can only contain letters, numbers and following characters: + &amp; @ # / % ? = ~- _ | ! : , . ; [ ] ( )</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Test_Website_Revoked_URL</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR(LEN (Test_Website_Revoked__c) = 0, 
REGEX(Test_Website_Revoked__c, &quot;^[hH][tT][tT][pP][sS][0-9A-Za-z+&amp;@#/%?=~\\-_|!:,.;\\[\\]()]*$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Test_Website_Revoked__c</errorDisplayField>
        <errorMessage>Please provide valid test website link, URL must begin with &apos;https&apos; and can only contain letters, numbers and following characters: + &amp; @ # / % ? = ~- _ | ! : , . ; [ ] ( )</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Test_Website_Valid_URL</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR(LEN (Test_Website_Valid__c) = 0, 
REGEX(Test_Website_Valid__c, &quot;^[hH][tT][tT][pP][sS][0-9A-Za-z+&amp;@#/%?=~\\-_|!:,.;\\[\\]()]*$&quot;) 
) 
)</errorConditionFormula>
        <errorDisplayField>Test_Website_Valid__c</errorDisplayField>
        <errorMessage>Please provide valid test website link, URL must begin with &apos;https&apos; and can only contain letters, numbers and following characters: + &amp; @ # / % ? = ~- _ | ! : , . ; [ ] ( )</errorMessage>
    </validationRules>
</CustomObject>